welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
do{ anvance();} while (est sur Blanc();)